[gd_scene load_steps=8 format=2]

[ext_resource path="res://FlappyBirdAssets/Exo-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Interface.gd" type="Script" id=2]
[ext_resource path="res://FlappyBirdAssets/message.png" type="Texture" id=3]
[ext_resource path="res://FlappyBirdAssets/gameover.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PlaceHolderImage" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -151.096
margin_right = 92.0
margin_bottom = 115.904
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -196.016
margin_right = 40.0
margin_bottom = -139.016
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverImage" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -103.854
margin_right = 96.0
margin_bottom = -61.8536
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GameOverImage"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 30.2993
margin_right = 138.0
margin_bottom = 87.2993
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 0
text = "SCORE:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -65.8167
margin_right = 50.0
margin_bottom = -25.8167
rect_min_size = Vector2( 100, 40 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -52.5
margin_top = -33.0
margin_right = 52.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.839216, 0.164706, 0.164706, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "RESTART"
align = 1
valign = 1

[node name="Node2D" type="Node2D" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="Node2D"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 3.52, 6.24 )
normal = ExtResource( 5 )
action = "Jump"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
